# zmcrypto

./: AUTHOR.TXT  BUILD.TXT  LIST.TXT  MANUAL.TXT  README.TXT  README.txt  alg_list.txt  ccm_test.txt
app/: app_asn1.c  app_asn1.h  app_bitoper.c  app_bitoper.h  app_hex.c  app_hex.h  app_x509.c  app_x509.h
doc/refs/: ZmCryptoLibrary开发计划.xlsx
doc/refs/3rd/cpp/: 3way.cpp  base32.cpp  bignum.h  blake2b.cpp  blake2s.cpp  cast5.cpp  idea.cpp  md6_nist.cpp  rc2.cpp  rc5.cpp  ripemd128.cpp  ripemd256.cpp  ripemd320.cpp  safer.cpp  salsa20.cpp  seed.cpp  tiger.cpp
doc/refs/3rd/h/: 3way.h  blake2b.h  blake2s.h  cast5.h  md6_nist.h  rc2.h  rc5.h  ripemd128.h  ripemd160.h  ripemd256.h  safer.h  seed.h  serpent.h  tiger.h  whirlpool.h
doc/refs/rsa_alone/: Makefile  log.cpp  rsa.h  rsabn.cpp  rsabn.h  run.txt  sha1.cpp  sha1.h  test
doc/refs/sm2_alone/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  log.h  run.txt  sm2.cpp  sm2bn.cpp  sm3.cpp  sm3.h  test  test.cpp
engine/: CMakeLists.txt  Makefile  aes.c  aes.h  dlmain.c  dlmain.h  engine.def  engine.vcxproj  md5.c  md5.h  new_aes.c  new_aes.h  readme.txt  zmconfig.h
hook/: hook.c  hook.h  replace_aes.c  replace_aes.h
refs/: ZmCryptoLibrary开发计划.xlsx  argon2.7z
refs/3rd/cpp/: bignum.cpp  camellia.cpp  rc6.cpp  ripemd160.cpp  serpent.cpp  whirlpool.cpp
refs/3rd/h/: base32.h  camellia.h  idea.h  rc6.h  ripemd320.h  salsa20.h
refs/rsa_alone/: CMakeLists.txt  rsa.cpp  test.cpp
refs/sm2_alone/: Makefile  sm2.h  sm2bn.h
report/: test_on_linux_mips_64bits_big_endia_20240716 copy.txt  test_on_ubuntu_amd_64bits_little_endia_20240717.txt
src/: adler32.c  adler32.h  aes.c  aes.h  asn1.c  asn1.h  base16.c  base16.h  base32.c  base32.h  base58.c  base58.h  base64.c  base64.h  bignum.h  block_pad.c  block_pad.h  blockpad.c  blockpad.h  blowfish.c  blowfish.h  cbc.c  cbc.h  ccm.c  ccm.h  cfb.c  cfb.h  cmac.c  cmac.h  crc32.c  crc32.h  ctr.c  ctr.h  debug.c  debug.h  des.c  des.h  dlmain.c  dlmain.h  ecb.c  (+52 more)
src/msinttypes/: changelog.txt
tests/cpp/: format_output.cpp  format_output.h  machine_info.cpp  machine_info.h  main.cpp  test_adler32.cpp  test_adler32.h  test_aes.cpp  test_aes.h  test_asn1.cpp  test_asn1.h  test_base16.cpp  test_base16.h  test_base64.cpp  test_base64.h  test_blockpad.cpp  test_blockpad.h  test_blowfish.cpp  test_blowfish.h  test_ccm.cpp  test_ccm.h  test_cmac.cpp  test_cmac.h  test_config.h  test_crc32.cpp  test_crc32.h  test_des.cpp  test_des.h  test_ed2k.cpp  test_ed2k.h  test_engine.cpp  test_engine.h  test_gcm.cpp  test_gcm.h  test_hmac.cpp  test_hmac.h  test_hook.cpp  test_hook.h  test_md2.cpp  test_md2.h  (+28 more)
vectors/: Untitled1.txt  adler32.txt  aes.txt  baidu.x509.asn1  baidu.x509.der  baidu.x509.pem  base64.txt  blowfish.txt  ccm.txt  cmac.txt  crc32.txt  des.txt  ed2k.txt  gcm.txt  google.x509.asn1  google.x509.der  google.x509.pem  hmac.txt  md2.txt  md4.txt  md5.txt  pbkdf2.txt  rc4.txt  salsa20.txt  sha1.txt  sha2.txt  sha3.txt  sm3.txt  sm4.txt  xtea.txt
